# python-course-2

./: .env.template  .gitignore  README.md  check_code.sh  pyproject.toml  tests.py
data/: transactions.csv  transactions.json  transactions.xlsx  transactions_excel.xlsx
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: csv_excel.py  decorators.py  external_api.py  generators.py  logger.py  main.py  masks.py  processing.py  reports.py  services.py  utils.py  views.py  widget.py
tests/: conftest.py  data_for_testing.py  test_calc.py  test_csv_excel.py  test_data.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widgets.py
