[project]
name = "course2"
version = "0.1.0"
description = "Course work"
authors = [
    { name = "Artem Filippow", email = "a.filippov@qtech.ru" }
]

requires-python = ">=3.11"
dependencies = [
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-utils (>=3.9.1,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"
python-dateutil  = '^2.9.0'


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'